2017-09-25  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-goto-url-new-session): Fix the problem ([emacs-w3m:12584])
	that a w3m buffer is mis-named "*server*-nnnnnn";
	Use (if (not CONDITION) FOO BAR) instead of (if CONDITION BAR FOO) style
	in order to improve the visibility of the code.

2017-09-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Workaround: don't do redirection if
	the onload function name doesn't end with ".submit" ([emacs-w3m:12795]).

	* w3m.el (w3m-content-type-alist): Run mailcap-parse-mailcaps and
	mailcap-parse-mimetypes before setting it.
	(w3m-create-page): Run w3m-external-view in tty for images, etc.
	(w3m-external-view-file): Make deleting of temp file delayed.
	[emacs-w3m:12793]

2017-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-verbose, w3m-message-silent, w3m-message): Doc fix.

	* w3m-cookie.el (w3m-about-cookie):
	Add GUIs that support limiting and deleting ([emacs-w3m:12790]).
	* w3m-form.el (w3m-form-make-form-data):
	Don't encode SPC in a search word used for w3m-cookie.

2017-08-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Parse a form in its page buffer.

2017-08-11  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-italic):
	* w3m-lnum.el (w3m-lnum-minibuffer-prompt, w3m-lnum-match):
	* w3m-session.el (w3m-session-select, w3m-session-selected):
	Update "face spec" DISPLAY form "type" to be `nil' for character-only
	terminals.  [emacs-w3m:12788]

2017-08-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Do onload redirection.
	[emacs-w3m:12787]

2017-08-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-arrived-shutdown):
	* w3m-cookie.el (w3m-cookie-shutdown): Don't error out.

2017-08-08  Akinori MUSHA  <knu@iDaemons.org>

	* w3m.el: Don't add autoload functions to hooks (see below).
	[emacs-w3m:12784]

	* w3m-cookie.el: Add w3m-cookie-shutdown to kill-emacs-hook here.
