@@ -1,3 +1,13 @@
+2017-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-cookie.el (w3m-about-cookie): Work for old Emacsen.
+	* aclocal.m4 (AC_PATH_EMACS): Work for Emacs 27 and greater.
+
+2017-09-25  Boruch Baum  <boruch_baum@gmx.com>
+
+	* w3m.el (w3m-confirm-leaving-secure-page):
+	Move forward ([emacs-w3m:12807]).
+
 2017-09-25  Boruch Baum  <boruch_baum@gmx.com>
 
 	* w3m.el (w3m-goto-url-new-session): Fix the problem ([emacs-w3m:12584])
